# Semantic-Memory-Engine

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DOCUMENTATION_GAP_ANALYSIS_v3.0.0.md  Dockerfile.frontend  Dockerfile.operator  Dockerfile.sidecar  LICENSE  LLMs as Queryable Databases Karpthy plan.md  OPERATION_POISONED_WELL_REPORT.md  README.md  RELEASE_NOTES_v3.0.0.md  SME v2.0.0 Operator Manual.md  SME v2.3.4 Operator Manual.md  SME v3.0.0 Operator Manual.md  WBM Archive comparitor  __main__.py  active_persona.json  adaptive_scout.py  auditor.py  bandit_results.json  check_db.py  conftest.py  cspell.json  data_processor.py  debug_imports.py  docker-compose.yaml  gephi_bridge.py  gephi_bridge_simple.py  greeting.tsx  harvester_spider.py  memory_synapse.py  monitoring_diagnostics.py  mypy.ini  package-lock.json  package.json  (+25 more)
.context/: .gitignore  decisions.md  identity.md  russ_vought_stylometric_forensics.md  session-2026-04-21-phase5-completion.md  skills.md  tokens.txt
.github/workflows/: SME Forensic Lab CI.yml  ci.yml
.kilo/command/: start-native-stack.md
.kilo/plans/: 1775165440062-calm-wolf.md  1776003236280-misty-canyon.md  1776597335006-gentle-mountain.md
.rl4/: timeline.md
.specify/memory/: constitution.md
SME/reports/: atlas_data.json
config/: config.yaml  sme_forensic_workspace.gephi
config/prometheus/: prometheus.yml
data/aether/: gate_stats.json  node_secret.key  (+1 more)
docs/: ACTION_CHECKLIST.md  ADVANCED_NLP.md  ADVANCED_QUICKSTART.md  ARCHITECTURE_IMPROVEMENTS.md  COMPLETE_ENHANCEMENT_SUMMARY.md  CONTAINER_INFRASTRUCTURE_ANALYSIS.md  CONTROL_ROOM_OPERATOR.md  CRAWLING_CAPABILITIES_EXPANSION.md  DELIVERABLES.md  DELIVERY_SUMMARY.txt  DEPENDENCY_GRAPH.md  ENVIRONMENT_VARIABLES.md  ERROR_HANDLING_GUIDE.md  EXTENSIONS_CATALOG.md  EXTENSION_CONTRACT.md  FILE_MANIFEST.md  HARVESTER_DEPLOYMENT_GUIDE.md  HARVESTER_SPIDER_COMPLETE.txt  HARVESTER_VISUAL_SUMMARY.txt  LEGACY_MIGRATION.md  MIGRATION_CHECKLIST.md  MIGRATION_SQLITE_TO_POSTGRES.md  NLP_PIPELINE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_REASSESSMENT.md  QUICKREF.md  README.md  RELEASE_STRATEGY.md  SCRAPEGRAPH_IMPROVEMENTS_SUMMARY.md  SCRAPEGRAPH_INTEGRATION_SUMMARY.md  SCRIBE_INTEGRATION_GUIDE.md  SCRIBE_QUICKSTART.md  SCRIBE_REFERENCE.txt  START_HERE_SPIDER.txt  TRAJECTORY_SUMMARY.md  WORDNET_INTEGRATION.md  progress.md
extension/: README.md  extension.js  package.json  tsconfig.json
extensions/: __init__.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.js
gateway/: Dockerfile  README.md  User_Guide.md  __init__.py  activation_streamer.py  auth.py  candidate_pool.py  circuit_breaker.py  cluster_sync.py  docker-compose.yml  em_cubed_bridge.py  epistemic_trust.py  extension_manager.py  feature_prober.py  gatekeeper_logic.py  graph_walk.py  hardware_security.py  harvester.py  health_check.py  mcp.json  mcp_server.py  metrics.py  mimo_bridge.py  momentum_buffer.py  nexus_db.py  rate_limiter.py  scientific_router.py  secure_extension_loader.py  session_manager.py  skills_bridge.py  surface_bridge.py  test_gateway.py  threat_harvester.py  tool_registry.py  traffic_router.py  triplet_harvester.py  vindex_overlay.py  vscode_explorer.py  weight_exporter.py
legacy/: HARVESTER_MANIFEST.json  REGISTRY_OLD.py  TOOLBOX_MANIFEST.json  data_processor.py  harvester_crawler.py  harvester_schema.py  harvester_spider.py  pipeline_orchestrator.py  retrieval_query.py  scribe_authorship.py  semantic_loom.py  test_fpdf.py  verify_pystyl.py  verify_reporting.py
reports/: forensic_intelligence_v1.md  nexus_intelligence_v1.md
scripts/: __init__.py  backup_postgres.py  extract_skill.py  modernize_dataclasses.py  modernize_types.py  remove_pydantic_patches.py  test_scrapegraph_integration.py  test_scrapegraph_simple.py  vendor_faststylometry.py  vendor_faststylometry_local.py
skills/: adversarial-pattern-detection.md  adversarial-simulation.md  agent-behavior-audit.md  ai-flow-orchestration.md  ai-tools-management.md  api-versioning.md  archival-diff-analysis.md  cognitive-mirror-test.md  consolidation_analysis.py  dark-data-discovery.md  docker-containerization.md  extension-development.md  forensic-data-vault.md  ghost-trap-detection.md  harvester-web-ingestion.md  knowledge-domain-mapping.md  logging-system.md  logic-consistency-verification.md  nexus-interface.md  plugin-system.md  registry.json  scrapegraph-harvesting.md  semantic-auditor.md  sentiment-analysis.md  social-intelligence-crawling.md  stylometric-analysis.md  synthetic-source-detection.md  system-health-scan.md  system-policy-governor.md  tactical-evidence-analysis.md  text-summarization.md  threat-immunization.md  tpm-echo-reference.md  trust-score-analysis.md  workflow-engine.md
sme-ide-extension/: README.md  package-lock.json  package.json  tsconfig.json
sme-ocr-service/: Dockerfile  README.md  pyproject.toml
sme-ocr-service/app/: __init__.py  main.py  ocr_engine.py  pdf_processor.py  schemas.py
sme-ocr-service/tests/: test_ocr.py
sme_cli/: main.py
src/: __init__.py  bootstrap.py  pipeline.py
tests/: __init__.py  conftest.py  final_simulation_verify.py  inject_mock_threat.py  master_forensic_test.py  test_activation_streamer.py  test_advanced_nlp.py  test_aether.py  test_agentic_neural_network.py  test_apb_logic.py  test_archival_diff.py  test_audit_engine.py  test_auth.py  test_candidate_pool.py  test_circuit_breaker.py  test_cluster_sync.py  test_crawler_sling.py  test_database_bridge.py  test_distributed_merkle.py  test_em_cubed_workflow_bridge.py  test_events.py  test_ext_api_key_manager.py  test_ext_behavior_audit.py  test_ext_forensic_media.py  test_ext_ghost_trap.py  test_ext_governor.py  test_ext_nur.py  test_ext_nur_additional.py  test_ext_scheduled_jobs.py  test_ext_social_intel.py  test_ext_social_intel_api.py  test_ext_stetho_scan.py  test_ext_webhook.py  test_extension_matrix.py  test_extension_sandbox.py  test_factory_thread_safety.py  test_forensic_math.py  test_gatekeeper_v1_2.py  test_gateway_load_benchmark.py  test_gephi_bridge.py  (+62 more)
(+468 files in other folders)
