[project]
name = "sme-forensic-toolkit"
# Keep this in sync with the latest CHANGELOG entry
version = "2.3.4"
description = "Hardware-aware semantic memory engine for 10GB datasets"
requires-python = ">=3.10"
dependencies = [
    # Core utilities
    "click>=8.0.0",
    "psutil>=5.9.0",
    "h5py>=3.10.0",
    # v2.1.0
    "markitdown>=0.1.0",
    "polars>=1.0.0",
    "pydantic-ai>=0.1.0",
    # v2.2.0
    "llama-cpp-python>=0.3.0",
    "pynvml>=11.5.0",
    # v2.3.3
    "psycopg2-binary>=2.9.0",
    # v2.3.0
    "smolagents>=1.0.0",
    # Gateway / MCP
    "fastmcp<3.0.0",
    "cryptography>=46.0.0",
    "PyJWT>=2.0.0",
    # Analysis
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=2.3.1,<2.4.0",
    # API
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    # Dev tools - linting & quality
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sme = "sme_cli.main:cli"

# Use find: so setuptools auto-discovers all subpackages (src.ai, src.core, etc.)
# The old explicit list ["sme_cli", "src", "gateway"] only registered top-level
# packages and caused ImportErrors for src.ai, src.core, src.api, etc.
[tool.setuptools.packages.find]
where = ["."]
include = ["sme_cli*", "src*", "gateway*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Tool Configurations (Added by Architecture Improvement Initiative)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RSE",    # flake8-raise
    "TRY",    # tryceratops
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "PLR2004"]
"legacy/*" = ["E501", "F401", "B008"]

[tool.ruff.isort]
known-first-party = ["src", "gateway", "sme_cli", "extensions"]

[tool.bandit]
targets = ["src", "gateway", "extensions"]
exclude = ["tests/", "legacy/"]
baseline = ".bandit Baseline"
detail = true

[tool.bandit.requirements]
fromlist = ["requirements.txt"]

[tool.bandit.messages]
desc = "Bandit security warning"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.mypy.paths]
source = ["src", "gateway", "extensions"]
tests = ["tests"]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_cpp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynvml.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | legacy
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
]

[tool.coverage.run]
source = ["src", "gateway"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
</parameter>
<task_progress>- [x] Consolidate dependency management (pyproject.toml as source of truth)
- [x] Add ruff, bandit, mypy configuration to pyproject.toml
- [ ] Add pre-commit configuration
- [ ] Fix SQL injection in forensic vault
- [ ] Refactor pipeline.py - extract late imports
- [ ] Address legacy code - audit and plan
- [ ] Create CI/CD workflow configuration