[project]
name = "sme-forensic-toolkit"
# Keep this in sync with the latest CHANGELOG entry
version = "3.0.1"
description = "Hardware-aware semantic memory engine for 10GB datasets"
requires-python = ">=3.12"
# NOTE: requirements.txt has a superset of these deps with specific pins.
# Use requirements.txt for Docker builds, pyproject.toml for pip install.
dependencies = [
    # Core utilities
    "click>=8.0.0",
    "psutil>=5.9.0",
    "h5py>=3.10.0",
    # Security - manifest validation
    "jsonschema>=4.0.0",
    # v2.1.0
    "markitdown>=0.1.0",
    "polars>=1.0.0",
    "pydantic-ai>=0.1.0",
    # v2.2.0
    "llama-cpp-python>=0.3.0",
    "pynvml>=11.5.0",
    # v2.3.3
    "psycopg2-binary>=2.9.0",
    # v2.3.0
    "smolagents>=1.0.0",
    # Gateway / MCP
    "fastmcp<3.0.0",
    "cryptography>=46.0.0",
    "PyJWT>=2.0.0",
    # Analysis
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=2.3.1,<2.4.0",
    # API
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    # Performance
    "orjson>=3.9.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    # Linting & formatting
    "ruff>=0.9.0",
    "bandit>=1.7.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Install with: pip install -e ".[nlp]"
nlp = [
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "scrapegraphai>=1.0.0",
]
# Install with: pip install -e ".[performance]"
performance = [
    "orjson>=3.9.0",
    "uvloop>=0.20.0",
]
# Install with: pip install -e ".[observability]"
observability = [
    "structlog>=24.0.0",
]

[project.scripts]
sme = "sme_cli.main:cli"

# Use find: so setuptools auto-discovers all subpackages (src.ai, src.core, etc.)
# The old explicit list ["sme_cli", "src", "gateway"] only registered top-level
# packages and caused ImportErrors for src.ai, src.core, src.api, etc.
[tool.setuptools.packages.find]
where = ["."]
include = ["sme_cli*", "src*", "gateway*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Tool Configurations (Added by Architecture Improvement Initiative)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RSE",    # flake8-raise
    "TRY",    # tryceratops
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "F401",   # unused import (intentional for optional dep checks)
    "TRY401", # verbose log message (intentional for structured logging)
    "PLC0415", # import-outside-top-level (intentional for optional deps)
    "TRY300", # try-consider-else (style preference)
    "TRY003", # raise-vanilla-args (style preference)
    "E402",   # module-import-not-at-top-of-file
    "E722",   # bare-except
    "PLW0603", # global-statement
    "B904",   # raise-without-from-inside-except
    "PERF401", # manual-list-comprehension
    "E701",   # multiple-statements-on-one-line-colon
    "RUF001", # ambiguous-unicode-character-string
    "TRY301", # raise-within-try
    "TRY002", # raise-vanilla-class
    "RUF012", # mutable-class-default
    "SIM102", # collapsible-if
    "N806",   # non-lowercase-variable-in-function
    "PLW1510", # subprocess-run-without-check
    "PLW2901", # redefined-loop-name
    "SIM117", # multiple-with-statements
    "PLC0206", # dict-index-missing-items
    "B007",   # unused-loop-control-variable
    "PLR0911", # too-many-return-statements
    "SIM116", # if-else-block-instead-of-dict-lookup
    "SIM105", # suppressible-exception
    "SIM108", # if-else-block-instead-of-if-exp
    "RUF006", # asyncio-dangling-task
    "E741",   # ambiguous-variable-name
    "B017",   # assert-raises-exception
    "B027",   # empty-method-without-abstract-decorator
    "B039",   # mutable-contextvar-default
    "N802",   # invalid-function-name
    "N817",   # camelcase-imported-as-acronym
    "PLW1508", # invalid-envvar-default
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF034", # useless-if-else
    "SIM103", # needless-bool
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "PLR2004"]
"legacy/*" = ["E501", "F401", "B008"]
"src/core/factory.py" = ["F821"]
"src/core/vader.py" = ["ALL"]
"extensions/ext_mirror_test/cross_modal_auditor.py" = ["N812"]

[tool.ruff.lint.isort]
known-first-party = ["src", "gateway", "sme_cli", "extensions"]

[tool.bandit]
targets = ["src", "gateway", "extensions"]
exclude = ["tests/", "legacy/"]
baseline = ".bandit Baseline"
detail = true

[tool.bandit.requirements]
fromlist = ["requirements.txt"]

[tool.bandit.messages]
desc = "Bandit security warning"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.mypy.paths]
source = ["src", "gateway", "extensions"]
tests = ["tests"]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_cpp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynvml.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | legacy
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov=gateway",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=75",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
]

[tool.coverage.run]
source = ["src", "gateway"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]