[project]
name = "sme-forensic-toolkit"
# Keep this in sync with the latest CHANGELOG entry
version = "3.0.1"
description = "Hardware-aware semantic memory engine for 10GB datasets"
requires-python = ">=3.13, <3.14"  # spacy incompatible with 3.14
# NOTE: requirements.txt has a superset of these deps with specific pins.
# Use requirements.txt for Docker builds, pyproject.toml for pip install.
dependencies = [
    # Core utilities
    "click>=8.0.0",
    "psutil>=5.9.0",
    "h5py>=3.10.0",
    # Security - manifest validation
    "jsonschema>=4.0.0",
    # v2.1.0
    "markitdown>=0.1.0",
    "polars>=1.0.0",
    "pydantic-ai>=0.1.0",
    # v2.2.0
    "llama-cpp-python>=0.3.0",
    "pynvml>=11.5.0",
    # v2.3.3
    "psycopg2-binary>=2.9.0",
    # v2.3.0
    "smolagents>=1.0.0",
    # Gateway / MCP
    "fastmcp<3.0.0",
    "cryptography>=46.0.0",
    "PyJWT>=2.0.0",
    # Analysis
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=2.3.1,<2.4.0",
    # API
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    # Performance
    "orjson>=3.9.0",
    # SME Core (from requirements.txt)
    "numba==0.63.1",
    "contourpy==1.3.2",
    "colorama==0.4.6",
    "cycler==0.12.1",
    "cymem==2.0.13",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring_parser==0.17.0",
    "email-validator==2.3.0",
    "fakeredis==2.33.0",
    # Pipeline & ML
    "prefect>=2.14.0",
    "pyod>=1.0.0",
    "waybackpy==3.0.6",
    "networkx>=3.0",
    "web3[tester]>=6.0.0",
    "dask[complete]>=2024.1.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "ccxt>=2.0.0",
    # Testing
    "pytest-asyncio>=0.21.0",
    # Windows
    'pywin32==311; sys_platform == "win32"',
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = [
    # Linting & formatting
    "ruff>=0.9.0",
    "bandit>=1.7.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Install with: pip install -e ".[nlp]"
nlp = [
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "scrapegraphai>=1.0.0",
]
# Install with: pip install -e ".[performance]"
performance = [
    "orjson>=3.9.0",
    "uvloop>=0.20.0",
]
# Install with: pip install -e ".[observability]"
observability = [
    "structlog>=24.0.0",
    "memtext>=0.5.0",
]

[project.scripts]
sme = "sme_cli.main:cli"

# Use find: so setuptools auto-discovers all subpackages (src.ai, src.core, etc.)
# The old explicit list ["sme_cli", "src", "gateway"] only registered top-level
# packages and caused ImportErrors for src.ai, src.core, src.api, etc.
[tool.setuptools.packages.find]
where = ["."]
include = ["sme_cli*", "src*", "gateway*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Tool Configurations (Added by Architecture Improvement Initiative)
# ============================================================================

[tool.bandit]
targets = ["src", "gateway", "extensions"]
exclude = ["tests/", "legacy/"]
baseline = ".bandit Baseline"
detail = true

[tool.bandit.requirements]
fromlist = ["requirements.txt"]

[tool.bandit.messages]
desc = "Bandit security warning"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | legacy
)/
'''
